# ez_mmdet

./: .gitignore  README.md  create_coco_mini.py  dataset.toml  pyproject.toml  run_test.py  sample_det.py  sample_ezmmpose.py  sample_mmpose.py  sample_rtmo.py  sample_train.py  test_auto_download.py  test_config_save.py  test_dataset_config_workflow.py  test_inference_fix.py  test_training.py  todo.md  verify_handlers.py  verify_phase1.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/testing_infra_20260129/: index.md  plan.md  spec.md
conductor/tracks/config_refactor_20260129/: plan.md
conductor/tracks/implement_ezmmpose_20260130/: plan.md
conductor/tracks/inference_cli_20260127/: plan.md  spec.md
conductor/tracks/testing_infra_20260129/: metadata.json  plan.md
libs/mmdetection/: pyproject.toml
libs/mmpose/: pyproject.toml
mmdetection/: pyproject.toml
src/ez_mmdetection/: __init__.py  cli.py
src/ez_mmdetection/core/: base.py  config_loader.py  engine.py  handlers.py  trainer.py
src/ez_mmdetection/models/: rtmdet.py
src/ez_mmdetection/schemas/: config.py  dataset.py  inference.py  model.py
src/ez_mmdetection/utils/: download.py  toml_config.py
src/ez_openmmlab/: __init__.py  cli.py
src/ez_openmmlab/core/: base.py  config_loader.py  detection.py  handlers.py  pose.py
src/ez_openmmlab/engines/: mmdet.py  mmpose.py
src/ez_openmmlab/models/: rtmdet.py
src/ez_openmmlab/models/mmdet/: rtmdet.py
src/ez_openmmlab/models/mmpose/: rtmo.py  rtmpose.py
src/ez_openmmlab/schemas/: config.py  inference.py  model.py
src/ez_openmmlab/utils/: download.py  toml_config.py
tests/: test_cli.py  test_e2e_smoke.py  test_engine_integration.py  test_handlers.py  test_inference.py  test_model_management.py  test_pose.py  test_regression.py  test_schemas.py  test_toml_config.py
tests/data/coco_mini/: dataset.toml
tests/e2e/: test_smoke.py
tests/integration/: test_regression.py
tests/unit/: test_config_loader.py  test_detector.py  test_pose.py
