[project]
name = "ez_mmdet"
version = "0.1.0"
description = "A user-friendly API for MMDetection"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "mmengine>=0.10.7",
    "openmim>=0.3.9",
    "mmdet",
    "pycocotools>=2.0.7",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
cpu = [
    "torch==1.13.1+cpu",
    "torchvision==0.14.1+cpu",
    # Logic: Linux expects +cpu, Windows expects standard 0.13.1
    "torchaudio==0.13.1+cpu; sys_platform == 'linux'",
    "torchaudio==0.13.1; sys_platform == 'win32'",
    "mmcv==2.1.0",
]
gpu = [
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "torchaudio==0.13.1",
    "mmcv>=2.0.0rc4, <2.2.0",
]

[tool.uv]
managed = true
package = true
# Restrict resolution to Windows and Linux only
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]
no-build-isolation-package = ["mmdet"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "mmcv-cpu"
url = "https://download.openmmlab.com/mmcv/dist/cpu/torch1.13/index.html"
explicit = true

[tool.uv.workspace]
members = ["mmdetection"]

[tool.uv.sources]
# This name MUST match the 'name' field inside mmdetection/pyproject.toml
mmdet = { workspace = true }

# CPU: Point directly to the specific wheel file on the OpenMMLab server
mmcv = [
  # Wheel for Python 3.10
  { url = "https://download.openmmlab.com/mmcv/dist/cpu/torch1.13.0/mmcv-2.1.0-cp310-cp310-manylinux1_x86_64.whl", marker = "extra == 'cpu' and python_version == '3.10'" },
  # Wheel for Python 3.9
  { url = "https://download.openmmlab.com/mmcv/dist/cpu/torch1.13.0/mmcv-2.1.0-cp39-cp39-manylinux1_x86_64.whl", marker = "extra == 'cpu' and python_version == '3.9'" }
]

# Map torch/vision/audio to the correct custom indexes
torch = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cu117", marker = "extra == 'gpu' and extra != 'cpu'" }
]
torchvision = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cu117", marker = "extra == 'gpu' and extra != 'cpu'" }
]
torchaudio = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cu117", marker = "extra == 'gpu' and extra != 'cpu'" }
]

[tool.uv.extra-build-dependencies]
mmdet = ["setuptools==69.5.1", "wheel", "torch==1.13.1+cpu"]

[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.14.14",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"] # D for Docstrings
ignore = ["D100", "D104"] # Ignore missing docstring in public module/package

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true # Often needed for MMDet internals

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
