[project]
name = "ez_openmmlab"
version = "0.1.0"
description = "A user-friendly API for OpenMMLab libraries"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "setuptools>=69.5.1",
    "mmengine>=0.10.7",
    "openmim>=0.3.9",
    "mmdet",
    "mmpose",
    "chumpy == 0.70",  # for MMPose 1.3.2
    "pycocotools>=2.0.7",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.3",
    "tomli-w>=1.2.0",
    "tomli>=2.4.0",
    "numpy==1.23.5",
    "opencv-python-headless==4.8.0.76",
    "requests>=2.32.5",
]

[project.scripts]
ez-mmdet = "ez_openmmlab.cli:app"

# --- OPTIONAL DEPENDENCIES (The Switch) ---
[project.optional-dependencies]
cpu = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "mmcv==2.1.0",
]
gpu = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "mmcv==2.1.0",
]

# --- UV CONFIGURATION ---
[tool.uv]
managed = true
package = true
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]
no-build-isolation-package = ["mmdet", "mmpose"]

# Declare conflicts between cpu and gpu extras
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

# 2. INDEXES (For PyTorch)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

# 3. FLAT INDEXES (For MMCV) - HTML pages with wheel links
[[tool.uv.index]]
name = "mmcv-cpu"
url = "https://download.openmmlab.com/mmcv/dist/cpu/torch2.0/index.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "mmcv-gpu"
url = "https://download.openmmlab.com/mmcv/dist/cu117/torch2.0/index.html"
format = "flat"
explicit = true

# 4. SOURCES - Map packages to indexes based on extra
[tool.uv.sources]
mmdet = { path = "./libs/mmdetection", editable = true }
mmpose = { path = "./libs/mmpose", editable = true }

# Map PyTorch packages to CPU or GPU index
torch = [
    { index = "pytorch-gpu", extra = "gpu" },
    { index = "pytorch-cpu", extra = "cpu" }, 
]
torchvision = [
    { index = "pytorch-gpu", extra = "gpu" },
    { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
    { index = "pytorch-gpu", extra = "gpu" },
    { index = "pytorch-cpu", extra = "cpu" },
]

# Map MMCV to CPU or GPU flat index
mmcv = [
    { index = "mmcv-gpu", extra = "gpu" },
    { index = "mmcv-cpu", extra = "cpu" },
]

[tool.uv.extra-build-dependencies]
mmdet = ["setuptools==69.5.1", "wheel"]
mmpose = ["setuptools==69.5.1", "wheel"]
chumpy = ["pip"]

[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

# --- DEV TOOLS ---
[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
