[project]
name = "mmpose"
version = "1.3.2"
description = "Minimal wrapper for mmpose"

dynamic = [
    "dependencies", 
    "optional-dependencies", 
    "readme", 
    "authors", 
    "classifiers", 
    "keywords", 
    "license",
    "requires-python"
]

[build-system]
requires = ["torch==1.13.1", "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
